# Obearon

./: .env.example  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  docker.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 46d61e685c2b_create_giveaway_table.py  4de1e0726e1b_add_friend_role.py  ccef2015d4be_create_initial_tables.py
bearification/: browser.py  database.py  discord_bot.py  mail.py
bearification/database/: crud.py  engine.py  models.py
obearon/: discord_bot.py  mail.py
obearon/database/: crud.py  engine.py  models.py
obearon/database/crud/: __init__.py  giveaway.py  role.py  verification.py  warframe_player.py  warframe_players.py
obearon/database/models/: __init__.py  giveaway.py  guild_role.py  verification.py  warframe_player.py  warframe_player_names.py  warframe_players.py
obearon/discord/: bot.py
obearon/discord/commands/: friend_role.py  giveaway.py  hibernation_role.py  upload_clan_inventory.py  verify_role.py
obearon/discord/events/: assign_hibernation.py
obearon/discord/modals/: giveaway.py
obearon/discord/tasks/: assign_hibernation.py  check_verified_users.py
obearon/discord/views/: giveaway.py  verify.py
