[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obearon"
version = "0.0.1"
authors = [
  {name = "akshualy"}
]
description = "Warframe to Discord linking tool."
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "black==25.1.0",
    "flake8==7.1.1",
    "isort==6.0.0",
    "pylint==3.3.4",
    "protonmail-api-client==2.0.0",
    "py-cord==2.6.1",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.37",
    "aiosqlite==0.21.0",
    "loguru==0.7.3",
    "beautifulsoup4==4.13.3",
    "alembic==1.15.2",
]

[project.urls]
Repository = "https://github.com/akshualy/Obearon.git"
"Bug Tracker" = "https://github.com/akshualy/Obearon/issues"

[tool.setuptools]
py-modules = ["obearon"]

[tool.black]
line-length = 120
extend-exclude = '''
alembic/
'''


[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
skip_glob = [ "venv/*" ]

[tool.pytest.ini_options]
addopts = "--pylint"
