[project]
name = "obearon"
version = "0.1.0"
description = "A Discord bot for the With Our Bear Hands clan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "beautifulsoup4>=4.13.4",
    "dateparser>=1.2.1",
    "loguru>=0.7.3",
    "py-cord>=2.6.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
]

[tool.black]
line-length = 120
extend-exclude = '''
alembic/
'''


[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
skip_glob = [ "venv/*" ]

[tool.pytest.ini_options]
addopts = "--pylint"
